p2/confs/apps-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webapps
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
  namespace: webapps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: nginx:stable
          ports:
            - containerPort: 80
          command: ["/bin/sh","-c"]
          args:
            - |
              echo "app1" > /usr/share/nginx/html/index.html
              exec nginx -g 'daemon off;'
---
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: webapps
spec:
  selector:
    app: app1
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
  namespace: webapps
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: nginx:stable
          ports:
            - containerPort: 80
          command: ["/bin/sh","-c"]
          args:
            - |
              echo "app2" > /usr/share/nginx/html/index.html
              exec nginx -g 'daemon off;'
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  namespace: webapps
spec:
  selector:
    app: app2
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-deployment
  namespace: webapps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
        - name: app3
          image: nginx:stable
          ports:
            - containerPort: 80
          command: ["/bin/sh","-c"]
          args:
            - |
              echo "app3" > /usr/share/nginx/html/index.html
              exec nginx -g 'daemon off;'
---
apiVersion: v1
kind: Service
metadata:
  name: app3-service
  namespace: webapps
spec:
  selector:
    app: app3
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapps-ingress
  namespace: webapps
spec:
  ingressClassName: traefik
  rules:
    - host: app1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-service
                port:
                  number: 80
    - host: app2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2-service
                port:
                  number: 80
    # Default (no Host match) -> app3
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app3-service
                port:
                  number: 80
